<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.todo.viewmodel.AddUpdateToDoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="20dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:paddingLeft="10dp"
            android:hint="@string/title"
            textChangedListener="@{viewModel.textWatcherTitle}"
            android:background="@drawable/mild_bg"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences|textMultiLine"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:paddingLeft="10dp"
            textChangedListener="@{viewModel.textWatcherDesc}"
            android:background="@drawable/mild_bg"
            android:layout_marginTop="30dp"
            android:hint="@string/description"
            android:imeOptions="actionDone"
            android:maxLines="8"
            android:inputType="textCapSentences|textMultiLine"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/weekly"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RadioGroup>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/mild_bg"
                android:ellipsize="end"
                android:gravity="center"
                android:onClick="@{() -> viewModel.setShowDatePicker(true)}"
                android:hint="@string/date"
                android:lines="1"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15sp"
                android:layout_weight="1"
                android:background="@drawable/mild_bg"
                android:gravity="center"
                android:hint="@string/time"
                android:onClick="@{() -> viewModel.setShowTimePicker(true)}"
                android:lines="1"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</layout>